songService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: song-service
spec:
  selector:
    app: song
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
