songService/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: song-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/songs
        pathType: Prefix
        backend:
          service:
            name: song-service
            port:
              number: 80
